--- a/src/components/bookItem/style.module.css
+++ b/src/components/bookItem/style.module.css
@@ -5,13 +5,14 @@
     box-shadow: 0 0 2px gray;
     border-radius: 5px;
     margin: 1rem 0;
-    width: fit-content;
+    width: 200px;
+    overflow-wrap: break-word;
 }
 
 .bookImage {
-    width: 200px;
     height: 250px;
     background-color: grey;
+    object-fit: cover;
 }
 .bookTitle {
     font-size: 1.2rem;
@@ -22,7 +23,6 @@
     font-size: 1.2rem;
     font-weight: 700;
     border-bottom: 1px solid gray;
-    
 }
 
 .bookActions {
@@ -30,9 +30,8 @@
     display: flex;
     justify-content: right;
 }
-.bookActions_pic {
+.bookActions_icon {
     display: inline-block;
     height: 26px;
-
-
+    cursor: pointer;
 }
