--- a/src/components/bookItem/style.module.css
+++ b/src/components/bookItem/style.module.css
@@ -2,7 +2,7 @@
     display: block;
     flex-direction: column;
     padding: 0.6rem;
-    box-shadow: 0 0 2px gray;
+    box-shadow: 0 0 0.5rem rgb(181, 178, 178);
     border-radius: 5px;
     margin: 1rem 0;
     width: 200px;
