--- a/src/components/bookForm/style.module.css
+++ b/src/components/bookForm/style.module.css
@@ -1,7 +1,7 @@
 form {
     color: dimgrey;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-end;
     flex-wrap: wrap;
     /* border-bottom: 1px solid rgb(12, 116, 180); */
