--- a/src/components/bookItem/style.module.css
+++ b/src/components/bookItem/style.module.css
@@ -35,3 +35,26 @@
     height: 26px;
     cursor: pointer;
 }
+
+.editForm {
+    font: 1.2rem;
+    box-shadow: none;
+    padding: 0;
+    margin-top: 0.7rem;
+    border-radius: 0;
+    border-bottom: 1px solid gray;
+    
+}
+.editButton{
+    visibility: hidden;
+    height: 0;
+    
+}
+.editForm_input {
+    padding: 0 0.2rem;
+    border: 0;
+    width: 100%;
+    background-color: rgb(231, 239, 255);
+    margin: 0.1rem 0;
+    outline-color: blue;
+}
